<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MeetingCreatorActivity"
    android:background="#F0F0F0"
    >


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        >

        <include
            android:id="@+id/activity_meeting_creator_button_toolbar"
            layout="@layout/custom_toolbar"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior = "@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_corners"
                android:layout_margin="16dp"
                android:elevation="4dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_assignment_24px"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_editText_topic"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_editText_topic"
                    app:layout_constraintBottom_toBottomOf="@id/activity_meeting_creator_editText_topic"
                    />

                <EditText
                    android:id="@+id/activity_meeting_creator_editText_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Titre (12 caractères maximum)"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="16dp"
                    android:maxLength="12"
                    />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_location_on_black_24dp"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_spinner_place"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_spinner_place"
                    app:layout_constraintBottom_toBottomOf="@id/activity_meeting_creator_spinner_place"
                    />

                <Spinner
                    android:id="@+id/activity_meeting_creator_spinner_place"
                    style="@android:style/Widget.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Lieu"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@id/activity_meeting_creator_editText_topic"
                    />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_date_range_black_24dp"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_text_view_date"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_text_view_date"
                    app:layout_constraintBottom_toBottomOf="@id/activity_meeting_creator_text_view_date"
                    />

                <TextView
                    android:id="@+id/activity_meeting_creator_text_view_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Date"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="16dp"
                    android:focusable="false"
                    app:layout_constraintTop_toBottomOf="@id/activity_meeting_creator_spinner_place"
                    style="@style/Widget.AppCompat.EditText"
                    />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_access_time_black_24dp"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_text_view_hour"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_text_view_hour"
                    app:layout_constraintBottom_toBottomOf="@id/activity_meeting_creator_text_view_hour"
                    />

                <TextView
                    android:id="@+id/activity_meeting_creator_text_view_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Heure"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="16dp"
                    android:focusable="false"
                    app:layout_constraintTop_toBottomOf="@id/activity_meeting_creator_text_view_date"
                    style="@style/Widget.AppCompat.EditText"
                    />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_timer_black_24dp"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_text_view_duration"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_text_view_duration"
                    app:layout_constraintBottom_toBottomOf="@id/activity_meeting_creator_text_view_duration"
                    />

                <TextView
                    android:id="@+id/activity_meeting_creator_text_view_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Durée"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="16dp"
                    android:focusable="false"
                    app:layout_constraintTop_toBottomOf="@id/activity_meeting_creator_text_view_hour"
                    style="@style/Widget.AppCompat.EditText"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_corners"
                android:elevation="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_people_black_24dp"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_zone_add_members"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_zone_add_members"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/activity_meeting_creator_zone_add_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="16dp"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_button_add_email"
                        app:layout_constraintStart_toStartOf="parent"
                        >

                        <MultiAutoCompleteTextView
                            android:id="@+id/activity_meeting_creator_multi_auto_complete_text_view_members"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Enter email"
                            android:inputType="textEmailAddress"
                            android:layout_marginEnd="16dp"
                            />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/activity_meeting_creator_chip_group_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/activity_meeting_creator_button_add_email"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_add_black_24dp"
                        android:background="#00FFFFFF"
                        android:tint="@color/colorAccent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />



                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/activity_meeting_creator_button_cancellation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Annuler"
                    app:layout_constraintEnd_toStartOf="@+id/activity_meeting_creator_button_validation"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:elevation="4dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/background_rounded_corners"
                    />

                <Button
                    android:id="@+id/activity_meeting_creator_button_validation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Valider"
                    app:layout_constraintStart_toEndOf="@+id/activity_meeting_creator_button_cancellation"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:elevation="4dp"
                    android:background="@drawable/background_rounded_corners"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>