...
            android:id="@+id/fragment_dialog_duration_validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:paddingEnd="16dp"
            android:clickable="true"
            android:text="OK"
            />

    </LinearLayout>

</LinearLayout>
